<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="722dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_corner_10_gray_3e"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/uploadresult_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:text="@string/upload_succeed_text"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/uploadresult_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:maxLines="3"
            android:paddingHorizontal="20dp"
            android:text="@string/ok_content"
            android:textColor="@color/colorWhite60"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadresult_title"
            tools:text="@string/upload_failtip" />

        <Button
            android:id="@+id/uploadresult_finish"
            android:layout_width="406dp"
            android:layout_height="94dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_12_radius_green_bg"
            android:gravity="center"
            android:text="@string/ok_text"
            android:textColor="@color/colorWhite"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadresult_content" />


        <Button
            android:id="@+id/uploadresult_close"
            android:layout_width="272dp"
            android:layout_height="94dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_12_radius_gray_bg"
            android:gravity="center"
            android:text="@string/close_text"
            android:textColor="@color/viomi_green"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/uploadresult_retry"
            app:layout_constraintTop_toBottomOf="@id/uploadresult_content" />

        <Button
            android:id="@+id/uploadresult_retry"
            android:layout_width="272dp"
            android:layout_height="94dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/shape_12_radius_green_bg"
            android:gravity="center"
            android:text="@string/retry_text"
            android:textColor="@color/colorWhite"
            android:textSize="34sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/uploadresult_close"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadresult_content" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/uploadresult_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:constraint_referenced_ids="uploadresult_close,uploadresult_retry"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>